<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.company.swim.Aktywnosc3">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="6dp">

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/opcja_1" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/opcja_2" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="173dp"
        android:layout_height="45dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="8dp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        android:layout_marginLeft="7dp" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="149dp"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="65dp"
        android:onClick="zmienTlo"
        android:text="@string/togglebutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp" />

    <ImageView
        android:contentDescription="@string/logo"
        android:id="@+id/imageView"
        android:layout_width="173dp"
        android:layout_height="177dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@android:drawable/sym_def_app_icon"
        android:layout_marginLeft="86dp" />

    <Button
        android:id="@+id/toasbutton"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="83dp"
        android:onClick="testPowiadomienia"
        android:text="@string/toast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/backbutton"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="83dp"
        android:onClick="wroc"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginRight="16dp" />

</android.support.constraint.ConstraintLayout>
