<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.company.swim.Aktywnosc2">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:text="@string/nazwisko"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:text="@string/imie"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:text="@string/pensja"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/toast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="powiadomienie"
            android:text="@string/toast" />

        <Button
            android:id="@+id/button3"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:onClick="wroc"
            android:text="@string/back" />
    </TableRow>
</TableLayout>
